--- a/input.css
+++ b/input.css
@@ -4,6 +4,6 @@
 
 @layer components {
   .buttons {
-    @apply bg-yellow-500 px-4 rounded-lg hover:bg-yellow-400 text-yellow-700 active:bg-yellow-300/80;
+    @apply bg-yellow-500 px-4 rounded-full hover:bg-yellow-400 text-yellow-700 active:bg-yellow-300/80;
   }
 }
